--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -39,7 +39,6 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
     <!-- Internal JavaScript main.js file-->
-    <script src="index.js"></script>
     <script src="bc-ferries.js"></script>
 </head>
 
@@ -129,27 +128,43 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="text-container">
-                        <h2 class="bc-ferries-h2">
-                            Why The Case Study?
-                        </h2>
-                        <p class="why-the-case-study-para">
-                            BC ferries is the largest ferry service is canada and serves more than 6 million people
-                            annually. it is the life line for thousands of British Columbians across the province.
-                        </p>
-                        <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of people,
-                            the service has failed to maintain and update their digital
-                            presence and provide a clear and positive digital user experience. As a British Columbian,
-                            and an engineer studying Systems Design, at the University of Waterloo,
-                            the potential for growth and improvement provided an inviting oppertunity for a re-design,
-                            examining the "pain points" for users during the digial experience
-                        </p>
+                            <h2 class="bc-ferries-h2">
+                                Why The Case Study?
+                            </h2>
+                            <p class="why-the-case-study-para">
+                                BC ferries is the largest ferry service is canada and serves more than 6 million people
+                                annually. it is the life line for thousands of British Columbians across the province.
+                            </p>
+                            <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
+                                people,
+                                the service has failed to maintain and update their digital
+                                presence and provide a clear and positive digital user experience. As a British
+                                Columbian,
+                                and an engineer studying Systems Design, at the University of Waterloo,
+                                the potential for growth and improvement provided an inviting oppertunity for a
+                                re-design,
+                                examining the "pain points" for users during the digial experience
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="container gen-timeline">
+                        <div class="contain-val">
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="bottom-padding"></div>
+        <div class="bottom-padding"></div>
+        <script src="bc-ferries.js"></script>
 </body>
 
 </html>
