--- a/index.html
+++ b/index.html
@@ -121,8 +121,26 @@
         <div class="col-sm-12">
             <h1 class="justify-content-center landing-text anim-typewriter display-3">A creative west coast kid.</h1>
             <h1 class="justify-content-center landing-text-sub display-4">
-            <stringname>S</stringname><stringname>a</stringname><stringname>m</stringname><stringname>m</stringname><stringname>y</stringname>
-            <stringname>R</stringname><stringname>o</stringname><stringname>b</stringname><stringname>e</stringname><stringname>n</stringname><stringname>s</stringname><stringname>-</stringname><stringname>P</stringname><stringname>a</stringname><stringname>r</stringname><stringname>a</stringname><stringname>d</stringname><stringname>i</stringname><stringname>s</stringname><stringname>e</stringname>
+                <stringname>S</stringname>
+                <stringname>a</stringname>
+                <stringname>m</stringname>
+                <stringname>m</stringname>
+                <stringname>y</stringname>
+                <stringname>R</stringname>
+                <stringname>o</stringname>
+                <stringname>b</stringname>
+                <stringname>e</stringname>
+                <stringname>n</stringname>
+                <stringname>s</stringname>
+                <stringname>-</stringname>
+                <stringname>P</stringname>
+                <stringname>a</stringname>
+                <stringname>r</stringname>
+                <stringname>a</stringname>
+                <stringname>d</stringname>
+                <stringname>i</stringname>
+                <stringname>s</stringname>
+                <stringname>e</stringname>
             </h1>
             <div class="landing-image">
                 <div class="row">
@@ -130,9 +148,10 @@
                     <div class="col-sm-6">
                         <div class="landing-page-content">
                             <p class="find-out-what-working-on">Find out what I've been working on!</p>
-                            <button class="button-des" id="projects-button" onclick="scrollToEl('projects',null)">Projects</button>
-                            <button class="button-des" id="portfolio-button"><a id="href-a-to-sammy" href="https://sammy.world"
-                                    target="_blank">Portfolio</a></button>
+                            <button class="button-des" id="projects-button"
+                                onclick="scrollToEl('projects',null)">Projects</button>
+                            <button class="button-des" id="portfolio-button"><a id="href-a-to-sammy"
+                                    href="https://sammy.world" target="_blank">Portfolio</a></button>
                             <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
                             <button class="button-des" id="cv-button"><a id="href-a-to-resume-dwld"
                                     href="./src/assets/resumeV16.pdf" target="_blank">Resume/CV</a></button>
@@ -140,93 +159,118 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="local-content" id="local-content-contain">
+        <div class="localbackground-img">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="projects-header display-4" id="projects">Projects</h1>
+                </div>
             </div>
+            <div class=row>
+                <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
+                    <div class="bc-ferries-section">
+                        <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
+                        <p class="section-p">A case study and redesign of the BC Ferries digital experience from user
+                            interviews to cloud functions!</p>
+                    </div>
+                </div>
             </div>
-            <div class="local-content" id="local-content-contain">
-                <div class="localbackground-img">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <h1 class="projects-header display-4" id="projects">Projects</h1>
-                        </div>
+            <div class=row>
+                <div class="col-sm-12 projects-section-portfolio">
+                    <div class="portfolio-spring-2019">
+                        <h2 class="section-p">Portfolio - Spring 2019</h2>
+                        <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using react.js
+                            and
+                            nifty design concepts!</p>
                     </div>
-                    <div class=row>
-                        <div class="col-sm-12 projects-section-bc-ferries">
-                            <div class="bc-ferries-section">
-                                <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
-                                <p class="section-p">A case study and redesign of the BC Ferries digital experience from user
-                                    interviews to cloud functions!</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-sm-12 projects-section-eb-web">
+                    <div class="eb-web-fall-2018">
+                        <h2 class="section-p">EB Web Design - Fall 2018</h2>
+                        <p class="section-p">A react.js web app designed for an actress based out of vancouver featuring
+                            her
+                            fall 2018 reel and bio!</p>
                     </div>
-                    <div class=row>
-                        <div class="col-sm-12 projects-section-portfolio">
-                            <div class="portfolio-spring-2019">
-                                <h2 class="section-p">Portfolio - Spring 2019</h2>
-                                <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using react.js and
-                                    nifty design concepts!</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-sm-12 projects-section-school-rel">
+                    <div class="school-rel-2017-2019">
+                        <h2 class="section-p">School Projects - First Year</h2>
+                        <p class="section-p">A collection of my first year projects from Systems Design Engieering, at
+                            UWaterloo!</p>
                     </div>
-                    <div class=row>
-                        <div class="col-sm-12 projects-section-eb-web">
-                            <div class="eb-web-fall-2018">
-                                <h2 class="section-p">EB Web Design - Fall 2018</h2>
-                                <p class="section-p">A react.js web app designed for an actress based out of vancouver featuring her
-                                    fall 2018 reel and bio!</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="work-header display-4" id="work">Work</h1>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-sm-12 work-section-hootsuite">
+                    <div class="hootsuite-section">
+                        <h2 class="section-p">Hootsuite - Fall 2019</h2>
+                        <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team, beginning
+                            September 2019!</p>
                     </div>
-                    <div class=row>
-                        <div class="col-sm-12 projects-section-school-rel">
-                            <div class="school-rel-2017-2019">
-                                <h2 class="section-p">School Projects - First Year</h2>
-                                <p class="section-p">A collection of my first year projects from Systems Design Engieering, at
-                                    UWaterloo!</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-sm-12 work-section-ffatg">
+                    <div class="ffatg-section">
+                        <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
+                        <p class="section-p">A look at my projects and contributions during my time as QA Lead at Finger
+                            Food!</p>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <h1 class="work-header display-4" id="work">Work</h1>
-                        </div>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-sm-12 work-section-eccc">
+                    <div class="eccc-section">
+                        <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
+                        <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
+                            Canada's Climate battle!</p>
                     </div>
-                    <div class=row>
-                            <div class="col-sm-12 work-section-hootsuite">
-                                <div class="hootsuite-section">
-                                    <h2 class="section-p">Hootsuite - Fall 2019</h2>
-                                    <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team, beginning September 2019!</p>
-                                </div>
-                            </div>
-                        </div>
-                    <div class=row>
-                        <div class="col-sm-12 work-section-ffatg">
-                            <div class="ffatg-section">
-                                <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
-                                <p class="section-p">A look at my projects and contributions during my time as QA Lead at Finger Food!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class=row>
-                            <div class="col-sm-12 work-section-eccc">
-                                <div class="eccc-section">
-                                    <h2 class="section-p">Environment and Climate Change Canada -  Winter 2018</h2>
-                                    <p class="section-p">Get a sneak peek into the thought and software infrastructure behind Canada's Climate battle!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="section-link-out">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="bottom-padding"></div>
-                    </body>
-                    
-                    </html>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-link-out">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="bottom-padding"></div>
+    <script>
+            window.bc_ferries_viewer = new ViewHandler("bc-ferries-anim-class", "bc-ferries-sec");
+        function onVisibilityChange() {
+            var old_visible;
+            return function () {
+                var visible = window.bc_ferries_viewer.isElementInViewport(window.bc_ferries_viewer.el_id);
+                if (visible != old_visible) {
+                    old_visible = visible;
+                    if (typeof callback == 'function') {
+                        callback();
+                    }
+                }
+            }
+        }
+
+        var handler = onVisibilityChange(function () {
+            return false;
+        });
+
+    </script>
+</body>
+
+</html>
