--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                             <p class="find-out-what-working-on">Find out what I've been working on!</p>
                             <button class="button-des" id="projects-button"
                                 onclick="scrollToEl('projects',null)">Projects</button>
-                            <button class="button-des" id="portfolio-button"><a id="href-a-to-sammy"
-                                    href="https://sammy.world" target="_blank">Portfolio</a></button>
+                                <a id="href-a-to-sammy"
+                                href="https://sammy.world" target="_blank"><button class="button-des" id="portfolio-button">Portfolio</button></a>
                             <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
-                            <button class="button-des" id="cv-button"><a id="href-a-to-resume-dwld"
-                                    href="./src/assets/resumeV16.pdf" target="_blank">Resume/CV</a></button>
+                            <a id="href-a-to-resume-dwld"
+                                    href="./src/assets/resumeV16.pdf" target="_blank"><button class="button-des" id="cv-button">Resume/CV</button></a>
                         </div>
                     </div>
                 </div>
@@ -169,40 +169,52 @@
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
-                    <div class="bc-ferries-section">
-                        <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
-                        <p class="section-p">A case study and redesign of the BC Ferries digital experience from user
-                            interviews to cloud functions!</p>
+                <div class="container">
+                    <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
+                        <div class="bc-ferries-section">
+                            <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
+                            <p class="section-p">A case study and redesign of the BC Ferries digital experience from
+                                user
+                                interviews to cloud functions!</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 projects-section-portfolio">
-                    <div class="portfolio-spring-2019">
-                        <h2 class="section-p">Portfolio - Spring 2019</h2>
-                        <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using react.js
-                            and
-                            nifty design concepts!</p>
+                <div class="container">
+                    <div class="col-sm-12 projects-section-portfolio">
+                        <div class="portfolio-spring-2019">
+                            <h2 class="section-p">Portfolio - Spring 2019</h2>
+                            <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using
+                                react.js
+                                and
+                                nifty design concepts!</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 projects-section-eb-web">
-                    <div class="eb-web-fall-2018">
-                        <h2 class="section-p">EB Web Design - Fall 2018</h2>
-                        <p class="section-p">A react.js web app designed for an actress based out of vancouver featuring
-                            her
-                            fall 2018 reel and bio!</p>
+                <div class="container">
+                    <div class="col-sm-12 projects-section-eb-web">
+                        <div class="eb-web-fall-2018">
+                            <h2 class="section-p">EB Web Design - Fall 2018</h2>
+                            <p class="section-p">A react.js web app designed for an actress based out of vancouver
+                                featuring
+                                her
+                                fall 2018 reel and bio!</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 projects-section-school-rel">
-                    <div class="school-rel-2017-2019">
-                        <h2 class="section-p">School Projects - First Year</h2>
-                        <p class="section-p">A collection of my first year projects from Systems Design Engieering, at
-                            UWaterloo!</p>
+                <div class="container">
+                    <div class="col-sm-12 projects-section-school-rel">
+                        <div class="school-rel-2017-2019">
+                            <h2 class="section-p">School Projects - First Year</h2>
+                            <p class="section-p">A collection of my first year projects from Systems Design Engieering,
+                                at
+                                UWaterloo!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -212,29 +224,37 @@
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 work-section-hootsuite">
-                    <div class="hootsuite-section">
-                        <h2 class="section-p">Hootsuite - Fall 2019</h2>
-                        <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team, beginning
-                            September 2019!</p>
+                <div class="container">
+                    <div class="col-sm-12 work-section-hootsuite">
+                        <div class="hootsuite-section">
+                            <h2 class="section-p">Hootsuite - Fall 2019</h2>
+                            <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team,
+                                beginning
+                                September 2019!</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 work-section-ffatg">
-                    <div class="ffatg-section">
-                        <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
-                        <p class="section-p">A look at my projects and contributions during my time as QA Lead at Finger
-                            Food!</p>
+                <div class="container">
+                    <div class="col-sm-12 work-section-ffatg">
+                        <div class="ffatg-section">
+                            <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
+                            <p class="section-p">A look at my projects and contributions during my time as QA Lead at
+                                Finger
+                                Food!</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class=row>
-                <div class="col-sm-12 work-section-eccc">
-                    <div class="eccc-section">
-                        <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
-                        <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
-                            Canada's Climate battle!</p>
+                <div class="container">
+                    <div class="col-sm-12 work-section-eccc">
+                        <div class="eccc-section">
+                            <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
+                            <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
+                                Canada's Climate battle!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -244,7 +264,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019</p>
+                    <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019 | <a
+                            href="mailto:srobensparradise@gmail.com">srobensparadise@gmail.com</a></p>
                 </div>
             </div>
         </div>
@@ -252,7 +273,7 @@
     </div>
     <div class="bottom-padding"></div>
     <script>
-            window.bc_ferries_viewer = new ViewHandler("bc-ferries-anim-class", "bc-ferries-sec");
+        window.bc_ferries_viewer = new ViewHandler("bc-ferries-anim-class", "bc-ferries-sec");
         function onVisibilityChange() {
             var old_visible;
             return function () {
