begain implementing the slidein animations for the landing page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
     <!-- Internal JavaScript main.js file-->
-    <script src="index.js"></script>
+    
 </head>
 
 <body>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class=row>
-                <div class="container">
+                <div class="container" id="bc-ferries-container">
                     <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
                         <div class="bc-ferries-section">
                             <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
@@ -181,8 +181,8 @@
                 </div>
             </div>
             <div class=row>
-                <div class="container">
-                    <div class="col-sm-12 projects-section-portfolio">
+                <div class="container" id="portfolio-container">
+                    <div class="col-sm-12 projects-section-portfolio" id="portfolio-sec">
                         <div class="portfolio-spring-2019">
                             <h2 class="section-p">Portfolio - Spring 2019</h2>
                             <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using
@@ -292,6 +292,7 @@
         });
 
     </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
