implemented transition in on scroll functionality for index.js

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 </div>
             </div>
             <div class=row>
-                <div class="container">
-                    <div class="col-sm-12 work-section-hootsuite">
+                <div class="container" id="hootsuite-container">
+                    <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
                         <div class="hootsuite-section">
                             <h2 class="section-p">Hootsuite - Fall 2019</h2>
                             <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team,
@@ -236,8 +236,8 @@
                 </div>
             </div>
             <div class=row>
-                <div class="container">
-                    <div class="col-sm-12 work-section-ffatg">
+                <div class="container" id="ffsatg-container">
+                    <div class="col-sm-12 work-section-ffatg" id="ffsatg-sec">
                         <div class="ffatg-section">
                             <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
                             <p class="section-p">A look at my projects and contributions during my time as QA Lead at
@@ -248,8 +248,8 @@
                 </div>
             </div>
             <div class=row>
-                <div class="container">
-                    <div class="col-sm-12 work-section-eccc">
+                <div class="container" id="eccc-container">
+                    <div class="col-sm-12 work-section-eccc"id="eccc-sec">
                         <div class="eccc-section">
                             <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
                             <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
