added the xhtml request to get the last date that the website was updated

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -39,6 +39,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
     <!-- Internal JavaScript main.js file-->
+    <script src="index.js"></script>
     <script src="bc-ferries.js"></script>
 </head>
 
@@ -151,12 +152,11 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="container gen-timeline">
-                        <div class="contain-val">
-                            <div class="col-sm-4"></div>
-                            <div class="col-sm-4"></div>
-                            <div class="col-sm-4"></div>
-                            <div class="col-sm-4"></div>
+                    <div class="container">
+                        <div class="timeline-outer">
+                            <div class="timeline">
+
+                            </div>
                         </div>
                     </div>
                 </div>
