--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
             <div class=row>
                 <div class="container" id="eccc-container">
-                    <div class="col-sm-12 work-section-eccc"id="eccc-sec">
+                    <div class="col-sm-12 work-section-eccc" id="eccc-sec">
                         <div class="eccc-section">
                             <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
                             <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
@@ -266,6 +266,8 @@
                 <div class="col-sm-12">
                     <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019 | <a
                             href="mailto:srobensparradise@gmail.com">srobensparadise@gmail.com</a></p>
+                    <p class="section-p cp">Last updated: <lastupdated id="last-updated"></lastupdated>
+                    </p>
                 </div>
             </div>
         </div>
