added error handling to ensure that there is not a situation where a node does not exist when getBoudingClientRect() is null and an uncaught error is thrown, the fix will return false from isElementInViewport() if the elements getBoundingClientRect() is null

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -162,7 +162,18 @@
                 </div>
             </div>
         </div>
-
+        <div class="section-link-out">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019 | <a
+                                href="mailto:srobensparradise@gmail.com">srobensparadise@gmail.com</a></p>
+                        <p class="section-p cp">Last updated: <lastupdated id="last-updated"></lastupdated>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="bottom-padding"></div>
         <script src="bc-ferries.js"></script>
 </body>
