added scroller to scroll dynamically on the timeline

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -154,8 +154,10 @@
                 <div class="col-sm-12">
                     <div class="container">
                         <div class="timeline-outer">
-                            <div class="timeline">
+                            <div class="timeline" id="timeline-id">
+                                <div class="timeline-inner" id="timeline-inner-id">
 
+                                </div>
                             </div>
                         </div>
                     </div>
