--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -150,11 +150,17 @@
                     </div>
                 </div>
             </div>
+            </div>
+        </div>
             <div class="row">
                 <div class="col-sm-12">
                     <div class="container">
                         <div class="timeline-outer">
+
                             <div class="timeline" id="timeline-id">
+                                    <div class="timeline-init" id="timeline-1"></div>
+                                    <div class="timeline-init" id="timeline-2"></div>
+                                    <div class="timeline-init" id="timeline-3"></div>
                                 <div class="timeline-inner" id="timeline-inner-id">
 
                                 </div>
@@ -163,7 +169,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
         <div class="section-link-out">
             <div class="container">
                 <div class="row">
