--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -161,6 +161,7 @@
                                     <div class="timeline-init" id="timeline-1"></div>
                                     <div class="timeline-init" id="timeline-2"></div>
                                     <div class="timeline-init" id="timeline-3"></div>
+                                    <div class="timeline-init" id="timeline-4"></div>
                                 <div class="timeline-inner" id="timeline-inner-id">
 
                                 </div>
