--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -158,14 +158,14 @@
                 <div class="timeline-outer">
 
                     <div class="timeline" id="timeline-id">
-                        <div class="timeline-init" id="timeline-1"></div>
-                        <div class="timeline-init" id="timeline-2"></div>
-                        <div class="timeline-init" id="timeline-3"></div>
-                        <div class="timeline-init" id="timeline-4"></div>
-                        <div class="timeline-s-des" id="timeline-description-1"></div>
-                        <div class="timeline-s-des" id="timeline-description-2"></div>
-                        <div class="timeline-s-des" id="timeline-description-3"></div>
-                        <div class="timeline-s-des" id="timeline-description-4"></div>
+                        <div class="timeline-init" id="timeline-1"><p class="sec-t">1</p></div>
+                        <div class="timeline-init" id="timeline-2"><p class="sec-t">2</p></div>
+                        <div class="timeline-init" id="timeline-3"><p class="sec-t">3</p></div>
+                        <div class="timeline-init" id="timeline-4"><p class="sec-t">4</p></div>
+                        <div class="timeline-s-des" id="timeline-description-1"><p class="des-t">User interviews and brainstorming</p></div>
+                        <div class="timeline-s-des" id="timeline-description-2"><p class="des-t">Mockups and prototypes</p></div>
+                        <div class="timeline-s-des" id="timeline-description-3"><p class="des-t">Design and development</p></div>
+                        <div class="timeline-s-des" id="timeline-description-4"><p class="des-t">Deployement and feedback</p></div>
                         <div class="timeline-s-des-b1" id="timeline-description-1-b"></div>
                         <div class="timeline-s-des-b1" id="timeline-description-2-b"></div>
                         <div class="timeline-s-des-b1" id="timeline-description-3-b"></div>
