completed timeline animation

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -156,16 +156,31 @@
         <div class="col-sm-12">
             <div class="container">
                 <div class="timeline-outer">
-
                     <div class="timeline" id="timeline-id">
-                        <div class="timeline-init" id="timeline-1"><p class="sec-t">1</p></div>
-                        <div class="timeline-init" id="timeline-2"><p class="sec-t">2</p></div>
-                        <div class="timeline-init" id="timeline-3"><p class="sec-t">3</p></div>
-                        <div class="timeline-init" id="timeline-4"><p class="sec-t">4</p></div>
-                        <div class="timeline-s-des" id="timeline-description-1"><p class="des-t">User interviews and brainstorming</p></div>
-                        <div class="timeline-s-des" id="timeline-description-2"><p class="des-t">Mockups and prototypes</p></div>
-                        <div class="timeline-s-des" id="timeline-description-3"><p class="des-t">Design and development</p></div>
-                        <div class="timeline-s-des" id="timeline-description-4"><p class="des-t">Deployement and feedback</p></div>
+                        <div class="timeline-init" id="timeline-1">
+                            <p class="sec-t">1</p>
+                        </div>
+                        <div class="timeline-init" id="timeline-2">
+                            <p class="sec-t">2</p>
+                        </div>
+                        <div class="timeline-init" id="timeline-3">
+                            <p class="sec-t">3</p>
+                        </div>
+                        <div class="timeline-init" id="timeline-4">
+                            <p class="sec-t">4</p>
+                        </div>
+                        <div class="timeline-s-des" id="timeline-description-1">
+                            <p class="des-t">User interviews and brainstorming</p>
+                        </div>
+                        <div class="timeline-s-des" id="timeline-description-2">
+                            <p class="des-t">Mockups and prototypes</p>
+                        </div>
+                        <div class="timeline-s-des" id="timeline-description-3">
+                            <p class="des-t">Design and development</p>
+                        </div>
+                        <div class="timeline-s-des" id="timeline-description-4">
+                            <p class="des-t">Deployement and feedback</p>
+                        </div>
                         <div class="timeline-s-des-b1" id="timeline-description-1-b"></div>
                         <div class="timeline-s-des-b1" id="timeline-description-2-b"></div>
                         <div class="timeline-s-des-b1" id="timeline-description-3-b"></div>
@@ -175,6 +190,45 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row section-descriptions">
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+            <div class="text-container">
+                <h2 class="bc-ferries-h2">
+                    User Interviews: the Problem Space
+                </h2>
+                <p class="why-the-case-study-para">
+                    Before I even start designing and first conduct user interviews and walkthroughs.
+                </p>
+                <p> What type of user interviews? I spend a total of 6 hours on ferries conducting user interviews. I
+                    asked
+                    patrons of all ages and backgrounds about their experience using the BC Ferries website and where
+                    there frustrations were.
+                    Talking to stakeholders builds empathy with users and helps identify the key problems for users.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="row section-descriptions">
+        <div class="col-sm-6">
+            <div class="text-container left-side">
+                <h2 class="bc-ferries-h2">
+                    Mockups and Prototypes
+                </h2>
+                <p class="why-the-case-study-para">
+                    Once the problem space is defined, we can begin designing and prototyping solutions
+                </p>
+                <p>
+                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to creat mockups and prototypes
+                    that I can present to users for feedback. using theses tools, designs can be quickly adjusted and iterated for improvements
+                    before development even starts.
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-6">
+
         </div>
     </div>
 
