--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -193,7 +193,9 @@
         </div>
     </div>
     <div class="row section-descriptions">
-        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+            <div class="user-interviews-img"></div>
+        </div>
         <div class="col-sm-6">
             <div class="text-container">
                 <h2 class="bc-ferries-h2">
@@ -228,7 +230,7 @@
             </div>
         </div>
         <div class="col-sm-6">
-
+                <div class="design-img"></div>
         </div>
     </div>
 
