--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -223,14 +223,16 @@
                     Once the problem space is defined, we can begin designing and prototyping solutions
                 </p>
                 <p>
-                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to creat mockups and prototypes
-                    that I can present to users for feedback. using theses tools, designs can be quickly adjusted and iterated for improvements
+                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
+                    creat mockups and prototypes
+                    that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
+                    iterated for improvements
                     before development even starts.
                 </p>
             </div>
         </div>
         <div class="col-sm-6">
-                <div class="design-img"></div>
+            <div class="design-img"></div>
         </div>
     </div>
 
