--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -258,6 +258,28 @@
                     </div>
             </div>
         </div>
+        <div class="row section-descriptions">
+                <div class="col-sm-6">
+                    <div class="text-container left-side">
+                        <h2 class="bc-ferries-h2">
+                            Deployement and Feedback
+                        </h2>
+                        <p class="why-the-case-study-para">
+                            Once the problem space is defined, we can begin designing and prototyping solutions
+                        </p>
+                        <p>
+                            To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
+                            creat mockups and prototypes
+                            that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
+                            iterated for improvements
+                            before development even starts.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="deploy-img"></div>
+                </div>
+            </div>
 
     <div class="section-link-out">
         <div class="container">
