--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -133,7 +133,8 @@
                                 Why The Case Study?
                             </h2>
                             <p class="why-the-case-study-para">
-                                BC ferries is the largest ferry service is canada and serves more than 6 million people
+                                <a href="https://www.bcferries.com" target="_blank">BC ferries</a> is the largest ferry
+                                service is canada and serves more than 6 million people
                                 annually. it is the life line for thousands of British Columbians across the province.
                             </p>
                             <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
@@ -236,50 +237,53 @@
         </div>
     </div>
     <div class="row section-descriptions">
-            <div class="col-sm-6">
-                    <div class="coding-img"></div>
-            </div>
-            <div class="col-sm-6">
-                
-                <div class="text-container">
-                        <h2 class="bc-ferries-h2">
-                            Design and Development
-                        </h2>
-                        <p class="why-the-case-study-para">
-                            Once the problem space is defined, we can begin designing and prototyping solutions
-                        </p>
-                        <p>
-                            To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
-                            creat mockups and prototypes
-                            that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
-                            iterated for improvements
-                            before development even starts.
-                        </p>
-                    </div>
+        <div class="col-sm-6">
+            <div class="coding-img"></div>
+        </div>
+        <div class="col-sm-6">
+
+            <div class="text-container">
+                <h2 class="bc-ferries-h2">
+                    Design and Development
+                </h2>
+                <p class="why-the-case-study-para">
+                    With a stellar design, development and iterative testing can begin.
+                </p>
+                <p>
+                    The app will be built using <code>react.js</code> and <code>react-router-dom</code> as well as
+                    firebase. The backend will
+                    be hosted on firebase and leverage cloud functions and firebase's real-time database to maintain a
+                    NoSQL backend. Informaiton on live ferry
+                    status will use a variation of <a href="https://github.com/yasyf/bcferries"
+                        target="_blank">yasyf/bcferries</a> ported to Node.js. More Informaiton about
+                    the code and dev approach can be found on <a href="https://github.com/SammyRobensParadise/bcferries"
+                        target="_blank">github</a>.
+                </p>
             </div>
         </div>
-        <div class="row section-descriptions">
-                <div class="col-sm-6">
-                    <div class="text-container left-side">
-                        <h2 class="bc-ferries-h2">
-                            Deployement and Feedback
-                        </h2>
-                        <p class="why-the-case-study-para">
-                            Once the problem space is defined, we can begin designing and prototyping solutions
-                        </p>
-                        <p>
-                            To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
-                            creat mockups and prototypes
-                            that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
-                            iterated for improvements
-                            before development even starts.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="deploy-img"></div>
-                </div>
+    </div>
+    <div class="row section-descriptions">
+        <div class="col-sm-6">
+            <div class="text-container left-side">
+                <h2 class="bc-ferries-h2">
+                    Deployement and Feedback
+                </h2>
+                <p class="why-the-case-study-para">
+                    With a beta version passing tests, the project can be deployed!
+                </p>
+                <p>
+                    The web app will be deployed and hosted on Google's firebase, and the source code will be available
+                    on <a href="https://github.com/SammyRobensParadise/bcferries" target="_blank">github</a>. The case
+                    study will not be intended to serve as an alternative to the BC ferries website, but rather stand
+                    alone as a possible re-design
+                    to address some of the pain points experienced by users when using their website.
+                </p>
             </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="deploy-img"></div>
+        </div>
+    </div>
 
     <div class="section-link-out">
         <div class="container">
