--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@
             <div class=row>
                 <div class="container" id="bc-ferries-container">
                     <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
+                        <a href="bc-ferries-redesign.html">
                         <div class="bc-ferries-section">
                             <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
                             <p class="section-p">A case study and redesign of the BC Ferries digital experience from
                                 user
                                 interviews to cloud functions!</p>
                         </div>
+                    </a>
                     </div>
                 </div>
             </div>
