added the portfolio.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sammy Robens-Paradise</title>
+    <title>Home | Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -65,9 +65,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./src/assets/resumeV16.pdf" download="Sammy Robens-Paradise Resume"
                         id="navbar_resume">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./creations.html" id="navbar_resume">Creations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
@@ -170,16 +167,18 @@
             </div>
             <div class=row>
                 <div class="container" id="bc-ferries-container">
-                    <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
                         <a href="bc-ferries-redesign.html">
+                    <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
+                        
                         <div class="bc-ferries-section">
                             <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
                             <p class="section-p">A case study and redesign of the BC Ferries digital experience from
                                 user
                                 interviews to cloud functions!</p>
                         </div>
-                    </a>
+                    
                     </div>
+                </a>
                 </div>
             </div>
             <div class=row>
