--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Redesign | Sammy Robens-Paradise</title>
+    <title>Portfolio | Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="bc-ferries.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -40,7 +40,7 @@
         </script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
-    <script src="bc-ferries.js"></script>
+    <script src="portfolio.js"></script>
 </head>
 
 <body>
@@ -125,7 +125,7 @@
                     <div class="col-sm-6">
                     </div>
                     <div class="col-sm-6">
-                        <div class="text-container hov"  onclick="scrollToEl('timeline-out',null)">
+                        <div class="text-container hov" onclick="scrollToEl('timeline-out',null)">
                             <h2 class="bc-ferries-h2">
                                 Why The Case Study?
                             </h2>
@@ -167,16 +167,20 @@
                         <div class="timeline-init" id="timeline-4">
                             <p class="sec-t">4</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-1" onclick="scrollToEl('user-interviews',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-1"
+                            onclick="scrollToEl('user-interviews',null)">
                             <p class="des-t">User interviews and brainstorming</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-2" onclick="scrollToEl('mockups-and-protos',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-2"
+                            onclick="scrollToEl('mockups-and-protos',null)">
                             <p class="des-t">Mockups and prototypes</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-3" onclick="scrollToEl('design-and-deploy',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-3"
+                            onclick="scrollToEl('design-and-deploy',null)">
                             <p class="des-t">Design and development</p>
                         </div>
-                        <div class="timeline-s-des hov" id="timeline-description-4" onclick="scrollToEl('release',null)">
+                        <div class="timeline-s-des hov" id="timeline-description-4"
+                            onclick="scrollToEl('release',null)">
                             <p class="des-t">Deployement and feedback</p>
                         </div>
                         <div class="timeline-s-des-b1" id="timeline-description-1-b"></div>
