portfolio page complete wihtouut mobile scaling

--- a/index.html
+++ b/index.html
@@ -167,44 +167,48 @@
             </div>
             <div class=row>
                 <div class="container" id="bc-ferries-container">
-                        <a href="bc-ferries-redesign.html">
-                    <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
-                        
-                        <div class="bc-ferries-section">
-                            <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
-                            <p class="section-p">A case study and redesign of the BC Ferries digital experience from
-                                user
-                                interviews to cloud functions!</p>
+                    <a href="bc-ferries-redesign.html">
+                        <div class="col-sm-12 projects-section-bc-ferries" id="bc-ferries-sec">
+
+                            <div class="bc-ferries-section">
+                                <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
+                                <p class="section-p">A case study and redesign of the BC Ferries digital experience from
+                                    user
+                                    interviews to cloud functions!</p>
+                            </div>
+
                         </div>
-                    
-                    </div>
-                </a>
+                    </a>
                 </div>
             </div>
             <div class=row>
                 <div class="container" id="portfolio-container">
-                    <div class="col-sm-12 projects-section-portfolio" id="portfolio-sec">
-                        <div class="portfolio-spring-2019">
-                            <h2 class="section-p">Portfolio - Spring 2019</h2>
-                            <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using
-                                react.js
-                                and
-                                nifty design concepts!</p>
+                    <a href="portfolio.html">
+                        <div class="col-sm-12 projects-section-portfolio" id="portfolio-sec">
+                            <div class="portfolio-spring-2019">
+                                <h2 class="section-p">Portfolio - Spring 2019</h2>
+                                <p class="section-p">Check out my Spring 2019 portfolio built from the ground up using
+                                    react.js
+                                    and
+                                    nifty design concepts!</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class=row>
                 <div class="container" id="eb-web-container">
-                    <div class="col-sm-12 projects-section-eb-web" id="eb-web-sec">
-                        <div class="eb-web-fall-2018">
-                            <h2 class="section-p">EB Web Design - Fall 2018</h2>
-                            <p class="section-p">A react.js web app designed for an actress based out of vancouver
-                                featuring
-                                her
-                                fall 2018 reel and bio!</p>
+                    <a href="https://emilybandel.github.io/webpage-application/" target="_blank">
+                        <div class="col-sm-12 projects-section-eb-web" id="eb-web-sec">
+                            <div class="eb-web-fall-2018">
+                                <h2 class="section-p">EB Web Design - Fall 2018</h2>
+                                <p class="section-p">A react.js web app designed for an actress based out of vancouver
+                                    featuring
+                                    her
+                                    fall 2018 reel and bio!</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class=row>
