--- a/portfolio.html
+++ b/portfolio.html
@@ -127,9 +127,9 @@
                             <div class="user-trigger-img"></div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="text-container hov">
+                        <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                                About the porfolio
+                                About the portfolio
                             </h2>
                             <p class="why-the-portfolio-para">
                                 I decieded to explore the usage of a native-like experince to display my design and
@@ -141,7 +141,7 @@
                                 to have the main focus of the portfolio be illustrations. the dark theme used is
                                 intended to create a change of scenery for users. The web app also conforms to a space
                                 them,
-                                something that has always been of interest to me.
+                                something that has always been of interest to me. The source code can be found on <a href="https://github.com/SammyRobensParadise/portfolio-app">github</a> ❤️.
                             </p>
                             <div class="button-space">
                                 <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
