--- a/school-projects.html
+++ b/school-projects.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio | Sammy Robens-Paradise</title>
+    <title>School Projects | Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
