added isometric safe design

--- a/school-projects.html
+++ b/school-projects.html
@@ -118,8 +118,8 @@
     <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="display-3">Portfolio, Spring 2019</h1>
-            <h1 class="display-4">Exploring the usage of react.js for a unique web app portfolio experience</h1>
+            <h1 class="display-3">Engineering Projects, Year 1</h1>
+            <h1 class="display-4">Exploring everything from app design to digital circuits and microcontrollers</h1>
             <div class="">
 
                 <div class="row">
@@ -129,20 +129,18 @@
                     <div class="col-sm-6">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                                About the portfolio
+                                Arduino Screaming Safe
                             </h2>
-                            <p class="why-the-portfolio-para">
-                                I decieded to explore the usage of a native-like experince to display my design and
-                                development skillset in an attempt to ask users to spend more time on each page.
+                            <p class="why-the-safe-para">
+                                The arduino screaming safe is, yes, safe that will only open if you scream the correct
+                                combination.
                             </p>
-                            <p>
-                                The attempt of the portfolio was to change the traditional format of a website to more
-                                of an <b>experience</b>. rather than using large amounts of text, I decieded
-                                to have the main focus of the portfolio be illustrations. the dark theme used is
-                                intended to create a change of scenery for users. The web app also conforms to a space
-                                them,
-                                something that has always been of interest to me. The source code can be found on <a
-                                    href="https://github.com/SammyRobensParadise/portfolio-app">github</a> ❤️.
+                            <p> <a href="https://github.com/SammyRobensParadise/arduino-screaming">Arduino Screaming</a>
+                                is a final project for <a href="https://uwflow.com/course/syde192" target="_blank">SYDE
+                                    192</a>.
+                                To open the safe you must "scream" at the safe at the correct times (in seconds)
+                                coresponding to the combination that you set. if the the screaming time is correct, the
+                                safe will open!
                             </p>
                             <div class="button-space">
                                 <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
