added isometric safe design

--- a/index.html
+++ b/index.html
@@ -213,14 +213,17 @@
             </div>
             <div class=row>
                 <div class="container" id="school-container">
-                    <div class="col-sm-12 projects-section-school-rel" id="school-sec">
-                        <div class="school-rel-2017-2019">
-                            <h2 class="section-p">School Projects - First Year</h2>
-                            <p class="section-p">A collection of my first year projects from Systems Design Engieering,
-                                at
-                                UWaterloo!</p>
+                    <a href="school-projects.html">
+                        <div class="col-sm-12 projects-section-school-rel" id="school-sec">
+                            <div class="school-rel-2017-2019">
+                                <h2 class="section-p">School Projects - First Year</h2>
+                                <p class="section-p">A collection of my first year projects from Systems Design
+                                    Engieering,
+                                    at
+                                    UWaterloo!</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
