--- a/school-projects.html
+++ b/school-projects.html
@@ -143,8 +143,8 @@
                                 safe will open!
                             </p>
                             <div class="button-space">
-                                <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
-                                        class="button-des" id="portfolio-button">Explore Portfolio</button></a>
+                                <a id="href-a-to-sammy"><button
+                                        class="button-des" id="portfolio-button">Find out how it works</button></a>
                             </div>
 
                         </div>
